[gd_scene load_steps=8 format=3 uid="uid://csbly5n6nnvc"]

[ext_resource type="Script" uid="uid://byh4n4rk7xsy5" path="res://scenes/ui/main_menu.gd" id="1_m1kxf"]
[ext_resource type="FontFile" uid="uid://dyqtfh8167vds" path="res://assets/ThickThinPixel.ttf" id="2_x2yvf"]
[ext_resource type="Texture2D" uid="uid://cswdbvj54gdju" path="res://assets/heart_empty.png" id="3_uhagc"]
[ext_resource type="Texture2D" uid="uid://bginyjernyv6b" path="res://assets/heart_full.png" id="4_btxxm"]

[sub_resource type="LabelSettings" id="LabelSettings_wb0q5"]
font = ExtResource("2_x2yvf")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_q85j6"]
font = ExtResource("2_x2yvf")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_8g5eo"]
font = ExtResource("2_x2yvf")
font_size = 18

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1kxf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14596128, 0.59464586, 0.9816441, 0.3647059)

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -114.0
offset_right = 214.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
text = "CLIMB AWAY"
label_settings = SubResource("LabelSettings_wb0q5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.592
anchor_right = 0.5
anchor_bottom = 0.592
offset_left = -47.0
offset_top = -30.880005
offset_right = 47.0
offset_bottom = 31.119995
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"

[node name="DiamondStats" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 60.0

[node name="TextureRect" type="TextureRect" parent="DiamondStats"]
layout_mode = 2
texture = ExtResource("3_uhagc")

[node name="DiamondLabel" type="Label" parent="DiamondStats"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_q85j6")
vertical_alignment = 1

[node name="RecordStats" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 242.0
offset_top = 23.0
offset_right = 296.0
offset_bottom = 63.0

[node name="TrophyIcon" type="TextureRect" parent="RecordStats"]
layout_mode = 2
texture = ExtResource("4_btxxm")

[node name="RecordLabel" type="Label" parent="RecordStats"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_8g5eo")
vertical_alignment = 1
